syntax = "proto3";

package schemas.common;

option go_package = "lib.kevinlin.info/schemas/unistore/common";

import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

// Visibility enumerates known bucket visibility types.
enum Visibility {
  // Default is used when no visibility option is available, or for backends that do not support
  // configurable bucket visibility.
  DEFAULT = 0;
  // Public describes publicly accessible buckets.
  PUBLIC = 1;
  // Private describes private buckets.
  PRIVATE = 2;
}

// Permissions describes the configuration-defined access permissions on this bucket.
message Permissions {
  // Head bucket is true when the HeadBucket RPC is permitted.
  bool head_bucket = 1;
  // Head object is true when the HeadObject RPC is permitted.
  bool head_object = 2;
  // Get object is true when the GetObject RPC is permitted.
  bool get_object = 3;
  // Stream get object is true when the StreamGetObject RPC is permitted.
  bool stream_get_object = 4;
  // Put object is true when the PutObject RPC is permitted.
  bool put_object = 5;
  // Stream put object is true when the StreamPutObject RPC is permitted.
  bool stream_put_object = 6;
  // Delete object is true when the DeleteObject RPC is permitted.
  bool delete_object = 7;
  // List buckets is true when the ListBuckets RPC is permitted.
  bool list_buckets = 8;
  // List objects is true when the ListObjects RPC is permitted.
  bool list_objects = 9;
}

// Lifecycle policy describes a server-side policy for expiration of objects attached to a bucket.
message LifecyclePolicy {
  // Pattern is a regular expression pattern matching object keys subjected to this policy.
  string pattern = 1;
  // Expiration is the time-to-live duration for objects affected by this policy.
  google.protobuf.Duration expiration = 2;
}

// Bucket describes metadata about a bucket.
message Bucket {
  // ID is the bucket's backend-defined unique ID.
  string id = 1;
  // Name is the bucket name.
  string name = 2;
  // Timestamp is the creation or modification timestamp of the bucket, if available.
  google.protobuf.Timestamp timestamp = 3;
  // Visibility is the bucket visibility type.
  Visibility visibility = 4;
  // Permissions is the set of permissions associated with the bucket, if available.
  Permissions permissions = 5;
  // Lifecycle policies are policies for pattern-based object expiration, if available.
  repeated LifecyclePolicy lifecycle_policies = 6;
  // Tags is a map of additional backend-defined metadata associated with the bucket.
  map<string, string> tags = 7;
}
